--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,32 @@
 body{
   font-family: 'Times New Roman', Times, serif;
+  
+  background-color: rgb(0, 102, 255);
 }
 
 .main{
-  background-color: rgb(218, 218, 218);
-  padding: 25px;
+  padding-top: 110px;
 }
-.boxx{
-  background-color: rgb(218, 218, 218);
+.boxx{ 
+  border-radius: 20px;
+}
+.card{
+  border-radius: 10px;
 }
 h5{
   color: #6c757d;
   font-size: 17px;
+}
+.month{
+  font-weight: bold;
 }
 
 .type{
   opacity: 0.7;
   text-align: center;
   margin-top: 0.75rem;
+  font-size: 21px; 
+  letter-spacing: 3px;
 }
 .price{
   text-align: center;
